[package]
name = "worldlens-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
strip = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
